feat(ui): 新增 Apple 風格深色主題並優化前端互動體驗
- 新增 apple-style.css 深色主題樣式檔
- 更新 index.html 採用新樣式，改善操作區塊顯示邏輯
- 結果區塊預設隱藏，操作時才顯示並自動捲動
- 健康檢查與日期載入改為背景執行，避免顯示 loading

refactor(mapper): 將 Collectors.toList() 改為 Stream.toList()

- DailySnapshotMapper 移除未使用的 Collectors import
- HoldingChangeMapper 移除未使用的 Collectors import
- HoldingMapper 移除未使用的 Collectors import
- DataCleanupService 移除未使用的 Collectors import
- HoldingQueryService 移除未使用的 Collectors import

feat(data): 新增資料恢復腳本與歷史資料

- 新增 DataRecoveryScript 用於補回 2025-11-26/27 持倉資料
- 新增 holdings.xlsx 資料檔案並更新 .gitignore 追蹤 data 目錄
- WebUIVerificationTest 新增 @ActiveProfiles test 註解